<resources>
    <string name="app_name">Lavendimia</string>
    <string name="tabSales">Ventas</string>
    <string name="clientTab">Clientes</string>
    <string name="articleTab">Muebles</string>
    <string name="configTab">Configuracion</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="rfc">R.F.C.</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="open_nav_drawer">Open Drawer</string>
    <string name="close_nav_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
